Several changes:
* Fix integration test flakiness (Derby)
* Add Jacoco coverage report
* Fix internal API imports in exported package
* Integrate gradle plugin build in Maven build
* Remove some "undo" remnants